--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -9,6 +9,7 @@ WORKDIR /opt/
 
 # clone backend repo
 RUN git clone https://github.com/Usamafuward/travelpoint-mobile-server/
+RUN git checkout feature/gr/deployment
 WORKDIR /opt/travelpoint-mobile-server
 # no need for venv as it's a container
 
