--- a/deployment/Dockerfile.api
+++ b/deployment/Dockerfile.api
@@ -4,13 +4,12 @@ FROM python:3.12.7-bookworm
 # update the system
 RUN apt-get -yq update
 
-# workdir
-WORKDIR /opt/
+# set working directory
+WORKDIR /opt/app
 
-# clone backend repo
-RUN git clone https://github.com/Usamafuward/travelpoint-mobile-server/
-RUN git checkout feature/gr/deployment
-WORKDIR /opt/travelpoint-mobile-server
+# copy local files instead of cloning
+COPY .. /opt/app/
+
 # no need for venv as it's a container
 
 # install requirements
