--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_NAME = "travelpoint"
 DB_USER = "postgres"
 DB_PASSWORD = "root"
-DB_HOST = "postgres"
+DB_HOST = "127.0.0.1"
 DB_PORT = "5432"
 DSN = f"dbname={DB_NAME} user={DB_USER} password={DB_PASSWORD} host={DB_HOST} port={DB_PORT}"
 
